# crudkit

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: test_and_lint.yml
crudkit-derive/: Cargo.toml
crudkit-derive/src/: lib.rs
crudkit-derive/src/derives/: derive_functions.rs  mod.rs
migrations/: 20250306210528_create_customers_table.sql
scripts/: init_db.sh
src/: database.rs  error.rs  lib.rs  server_state.rs
src/traits/: id_parameter.rs  mod.rs  read.rs  shared.rs  write.rs
tests/: database_connection.rs  integration_test_1.rs
