[package]
name = "crudkit"
version = "0.0.0"
edition = "2021"
description = "This is a placeholder crate for a project I am planning on creating. If I do not get around to it, I will happily relinquish this crate name to whoever will actually use it. Contact me via contact@lthoerner.com if you would like to claim this crate."
license = "MIT OR Apache-2.0"

[dependencies]
axum = "0.8.1"
http = "1.2.0"
rand = "0.9.0"
sqlx = { version = "0.8.3", features = ["postgres"] }
crudkit-derive = { path = "./crudkit-derive" }

[dev-dependencies]
serde = { version = "1.0.218", features = ["derive"] }
